생성, 상세보기, 리스트, 수정완료